--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="logo">SEND</div>
       <div class="nav-items">
-        <a href="/">Home</a> <a href="/">About</a> <a href="/">Contact</a>
+        <a href="/">Home</a> <a href="/">About</a>s <a href="/">Contact</a>
       </div>
     </nav>
     <section class="hero">
